gitops/apps/spring-demo/cluster-a/order-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: spring-demo
  labels:
    app.kubernetes.io/name: order-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: spring-demo
    app.kubernetes.io/version: 0.1.0-cloud-native.20260604182139
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: order-service
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8080"
      labels:
        app.kubernetes.io/name: order-service
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: spring-demo
        app.kubernetes.io/version: 0.1.0-cloud-native.20260604182139
    spec:
      terminationGracePeriodSeconds: 45
      containers:
        - name: order-service
          image: registry.b.lab.home/k3s-lab/order-service:0.1.0-cloud-native.20260604182139@sha256:3d1442f9343f7c8a97d15a7d9b6ba9bf092451306cb72a7d38eae4b6f5bd172b
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            periodSeconds: 20
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 768Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: order-service
      volumes:
        - name: tmp
          emptyDir: {}
