gitops/apps/spring-demo/cluster-a/order-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: spring-demo
  labels:
    app.kubernetes.io/name: order-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: spring-demo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: order-service
